[package]
name = "client-template"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "*", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "*", features = ["rt", "tokio-macros", "sync"] }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[dependencies.asteroids]
git = "https://github.com/StardustXR/asteroids.git"
branch = "dev"
